--- a/hello.html
+++ b/hello.html
@@ -16,10 +16,15 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
-		
+		<!--mon descriptiv-->
 		<div>
+			<h1>ma description</h1>
 			<p>je suis super motivé</p>
 		</div>
-		
+		<!--mon recompense-->
+		<div>
+			<h1>ma reoompense</h1>
+			<p>en construction</p>
+		</div>
 	
 </body></html>
