--- a/hello.html
+++ b/hello.html
@@ -25,6 +25,7 @@
 		<div>
 			<h1>ma reoompense</h1>
 			<p> <img src="images\medal_bronze.png"> </p>
+			<p> <img src="images\medal_gold.png"> </p>
 		</div>
 		<!--mon gist-->
 		<div>
