#4 rajout de troisime medaile

--- a/hello.html
+++ b/hello.html
@@ -26,6 +26,7 @@
 			<h1>ma reoompense</h1>
 			<p> <img src="images\medal_bronze.png"> </p>
 			<p> <img src="images\medal_gold.png"> </p>
+			<p> <img src="images\medal_silver.png"> </p>
 		</div>
 		<!--mon gist-->
 		<div>
