--- a/hello.html
+++ b/hello.html
@@ -24,7 +24,7 @@
 		<!--mon recompense-->
 		<div>
 			<h1>ma reoompense</h1>
-			<p> <img src="images\medal_bronze.png"> <img src="images\medal_bronze.png"> </p>
+			<p> <img src="images\medal_bronze.png"> <img src="images\medal_bronze.png"> <img src="images\medal_bronze.png"> </p>
 			<p> <img src="images\medal_gold.png"> </p>
 			<p> <img src="images\medal_silver.png"> </p>
 		</div>
