--- a/hello.html
+++ b/hello.html
@@ -33,6 +33,11 @@
 			<h1>mon gist</h1>
 			<p> <script src="https://gist.github.com/aynur81/6377e4f1a253d35ab6b0bf9ba62c743e.js"> </script></p>
 		</div>
-		
-	
+		<!--commandes git-->
+		<div>
+			<h1>mes commandes git</h1>
+			<p> git pull </script></p>
+			<p> git push </script></p>
+			<p> git log </script></p>
+		</div>	
 </body></html>
